--- a/index.html
+++ b/index.html
@@ -237,10 +237,9 @@
         </div>
 
         <div id="smartWatches">
-            <div class="card1">
+            <div onclick="gotoproduct_1()" class="card1">
                 <div>
-                    <img
-                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main2_529ecf13-c993-4fe7-a2d6-9357f1a47db4_600x.png?v=1650387008" />
+                    <img  src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main2_529ecf13-c993-4fe7-a2d6-9357f1a47db4_600x.png?v=1650387008" />
                 </div>
                 <div>
                     <div class="star">
@@ -261,10 +260,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="card1">
+            <div onclick="gotoproduct_2()" class="card1">
                 <div>
-                    <img
-                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/a6549acb-b075-4c3e-8ed3-9c9fcba32d42_400x.png?v=1625046216" />
+                    <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/a6549acb-b075-4c3e-8ed3-9c9fcba32d42_400x.png?v=1625046216" />
                 </div>
                 <div>
                     <div class="star">
@@ -288,10 +286,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="card1">
+            <div onclick="gotoproduct_3()" class="card1">
                 <div>
-                    <img
-                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main-blue_d6503e2e-e0b1-4c4e-af28-2164903baf9f_400x.png?v=1640237576" />
+                    <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main-blue_d6503e2e-e0b1-4c4e-af28-2164903baf9f_400x.png?v=1640237576" />
                 </div>
                 <div>
                     <div class="star">
@@ -317,10 +314,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="card1">
+            <div onclick="gotoproduct_4()" class="card1">
                 <div>
-                    <img
-                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/xtend_black_400x.png?v=1650387008" />
+                    <img  src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/xtend_black_400x.png?v=1650387008" />
                 </div>
                 <div>
                     <div class="star">
@@ -1036,6 +1032,18 @@
   }
   function gotoAirdopes681(){
       window.location.href="airdopes681.html"
+  }
+  function gotoproduct_1(){
+      window.location.href="product1.html"
+  }
+  function gotoproduct_2(){
+      window.location.href="product2.html"
+  }
+  function gotoproduct_3(){
+      window.location.href="product3.html"
+  }
+  function gotoproduct_4(){
+      window.location.href="product4.html"
   }
 
   </script>
