--- a/airdopes441.html
+++ b/airdopes441.html
@@ -117,6 +117,10 @@
         </div>
         
     </div>
+    <div id="watch_details">
+        <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Xtend_W_845b06ed-33f1-440c-b9c8-47d05a085a19.png?v=1624338806"
+            alt="">
+    </div>
     <div id="ion">
         <p>DESCRIPTION</p>
         <hr style="border: 1px solid red; width: 135px; margin-top: -15px;">
