--- a/product2.html
+++ b/product2.html
@@ -82,10 +82,10 @@
     </div>
     <div id="shubham">
         <div id="tyagi">
-            <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main3_1_600x.png?v=1640628318">
+            <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/a6549acb-b075-4c3e-8ed3-9c9fcba32d42_400x.png?v=1625046216">
         </div>
         <div id="st">
-            <h1>boAt Watch Xtend‌</h1>
+            <h1>boAt Storm</h1>
             <p>SMART WATCHES</p>
             <div class="rockstar">
                 <span style="color: #ed1c24;" class="fa fa-star checked"></span>
@@ -97,7 +97,7 @@
             </div>
             <div id="suraj">
                 <p>₹ <span>2499</span></p>
-                <p>₹ 7,990</p>
+                <p>₹ 5,990</p>
             </div>
             <p>Inclusive of all taxes</p>
             <p>Get 20% cashback upto Rs.500 using <img
@@ -133,7 +133,7 @@
     <div id="ion">
         <p>DESCRIPTION</p>
         <hr style="border: 1px solid red; width: 135px; margin-top: -15px;">
-        <h1 style="text-align: center; color: white; font-size: 50px;  font-family: sans-serif;">BoAt Watch‌ Xtend</h1>
+        <h1 style="text-align: center; color: white; font-size: 50px;  font-family: sans-serif;">boAt Storm</h1>
         <p style="text-align: center; color: white; padding: 0px 80px 30px 80px; font-family: sans-serif; font-size: 15px; letter-spacing: 1px;">
             Ask more, get more, and do more with the smartest smartwatch in town - the all-new boAt Xtend. Leave your
             phone in your pocket and get your tasks done with a built-in Alexa. Take control over your music, fitness,
