--- a/payment.html
+++ b/payment.html
@@ -75,10 +75,12 @@
             font-family: 'Open Sans', sans-serif;
 
         }
-
-        .payment>img {
+        .payment{
+            width:100%;
+        }
+        #payimg {
             height: 100px;
-            width: 60%;
+            width: 200px;
             margin-top: 5px;
             margin-left: 15px;
         }
@@ -131,7 +133,7 @@
 
         }
 
-        img {
+        .cardimage {
             max-width: 95px;
             height: auto;
         }
@@ -272,13 +274,13 @@
             <div class="payment">
                 <h2>PAYMENT DETAILS</h2>
                 <h3>Cards Accepted</h3>
-                <img src="https://blink.ucsd.edu/_images/finance-tab/payment-cards/credit-card.png" />
+                <img id="payimg" src="https://blink.ucsd.edu/_images/finance-tab/payment-cards/credit-card.png" />
 
                 <form id="form">
                     <input type="text" placeholder="Name On Card" id="cardName" required>
-                    <input type="number" placeholder="Card Number" id="cardNumber">
+                    <input type="number" placeholder="Card Number(1234567890)*" id="cardNumber">
                     <input type="month" placeholder="Expiry date" id="date" required>
-                    <input type="password" placeholder="CVV*" id="cvv">
+                    <input type="password" placeholder="CVV(123)*" id="cvv">
                     <input type="submit" value="PLACE ORDER" id="submit">
                 </form>
             </div>
@@ -374,6 +376,7 @@
 
             var img = document.createElement("img");
             img.setAttribute("src", ele.image_url);
+            img.setAttribute("class","cardimage")
 
             card1.append(img);
 
