--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -1005,45 +1005,45 @@
 //       fea.style.display="block";
 //   })
   function gotoBoatxtend(){
-      window.location.href="boAtextend.html"
+      window.location.href="../Products Pages/boAtextend.html"
   }
   function gotoAirdopes115(){
-      window.location.href="airdopes115.html"
+      window.location.href="../Products Pages/airdopes115.html"
   }
   function gotoAirdopes500(){
-      window.location.href="airdopes500anc.html"
+      window.location.href="../Products Pages/airdopes500anc.html"
   }
   function gotoTopseller(){
       window.location.href="index.html#shoP";
   }
 
   document.querySelector(".slide1").addEventListener("click",function(){
-      window.location.href="airdopes500anc.html"
+      window.location.href="../Products Pages/airdopes500anc.html"
   })
 
   function gotoAirdopes441(){
-      window.location.href="airdopes441.html"
+      window.location.href="../Products Pages/airdopes441.html"
   }
   function gotoAirdopes402(){
-      window.location.href="airdopes402.html"
+      window.location.href="../Products Pages/airdopes402.html"
   }
   function gotoAirdopes281(){
-      window.location.href="airdopes281.html"
+      window.location.href="../Products Pages/airdopes281.html"
   }
   function gotoAirdopes681(){
-      window.location.href="airdopes681.html"
+      window.location.href="../Products Pages/airdopes681.html"
   }
   function gotoproduct_1(){
-      window.location.href="product1.html"
+      window.location.href="../Products Pages/product1.html"
   }
   function gotoproduct_2(){
-      window.location.href="product2.html"
+      window.location.href="../Products Pages/product2.html"
   }
   function gotoproduct_3(){
-      window.location.href="product3.html"
+      window.location.href="../Products Pages/product3.html"
   }
   function gotoproduct_4(){
-      window.location.href="product4.html"
+      window.location.href="../Products Pages/product4.html"
   }
 
   </script>
