--- a/Products Pages/airdopes115.HTML
+++ b/Products Pages/airdopes115.HTML
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="boatextand.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="bottom.css">
+    <link rel="stylesheet" href="../Homepage/navbar.css">
+    <link rel="stylesheet" href="../Homepage/bottom.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
     </div>
     <div id="nav">
         <div id="logo">
-            <a href="index.html">
+            <a href="../Homepage/index.html">
                 <img
                     src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Boat-Logo_200x_200x_f9c79bf9-9c9a-477d-ab6a-7c889a1f2f70_170x.png?v=1646731229" />
             </a>
@@ -36,7 +36,7 @@
             <div id="btns2">
                 <div>
                     <div>
-                        <img src="search.png" />
+                        <img src="../Homepage/search.png" />
                     </div>
                     <input type="search" id="search" placeholder="Search..." />
                 </div>
@@ -349,8 +349,8 @@
     </body>
 
 </html>
-<script src="navbar.js"></script>
-<script src="bottom.js"></script>
+<script src="../Homepage/navbar.js"></script>
+<script src="../Homepage/bottom.js"></script>
 <script>
 //     var arr=JSON.parse(localStorage.getItem("cartData"))||[];
 //     document.querySelector("#btn5").addEventListener("click",function(){
