--- a/Payment Page/payment.html
+++ b/Payment Page/payment.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Payment Page</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&family=Koulen&family=Montserrat&family=Poppins:wght@100;400;700&family=Rubik:wght@600&display=swap"
         rel="stylesheet">
@@ -242,7 +242,7 @@
     <!-- payment page -->
 
 
-    <a href="index.html"> <img id="pic"
+    <a href="../Homepage/index.html"> <img id="pic"
             src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Boat-Logo_200x_200x_f9c79bf9-9c9a-477d-ab6a-7c889a1f2f70_170x.png?v=1646731229" /></a>
     <div id="container">
         <div id="box">
@@ -498,7 +498,7 @@
 
         if (y == "1234567890" && p == "123") {
             alert("Payment Successful");
-            window.location.href = "paymentsuccess.html"
+            window.location.href = "../Payment Page/paymentsuccess.html"
         }
         else {
             alert("Invalid Card details")
