--- a/Payment Page/paymentsuccess.html
+++ b/Payment Page/paymentsuccess.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Payment Successful</title>
 
     <style>
         #finalPage{
@@ -56,7 +56,7 @@
     </style>
 </head>
 <body> 
-    <a href="index.html"> <img id="picture" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Boat-Logo_200x_200x_f9c79bf9-9c9a-477d-ab6a-7c889a1f2f70_170x.png?v=1646731229"/></a>
+    <a href="../Homepage/index.html"> <img id="picture" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Boat-Logo_200x_200x_f9c79bf9-9c9a-477d-ab6a-7c889a1f2f70_170x.png?v=1646731229"/></a>
 
        <div id="finalPage">
            <div id="newak">
@@ -64,7 +64,7 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQH8HTGtul4zYEvvqjC4Dgrt3zUxmWEyd37pv7OkjmNk2mbQnmC4tISEhzYS8L7AJ34RhU&usqp=CAU"/>
            </div>
           <h4>Thanks for Shopping</h4>
-          <button><a href="index.html">BACK TO SHOPPING</a></button>
+          <button><a href="../Homepage/index.html">BACK TO SHOPPING</a></button>
        </div>
 </body>
 </html>
